# web

examples/css/: media_queries.css
examples/markup_languages/: example.sgml  index.html
examples/sql/: create.sql  insert_into.sql  select.sql  update.sql
patterns/decorator/: BoldDecorator.h  BoldText.cpp  BoldText.h  CMakeLists.txt  CursiveDecorator.cpp  CursiveText.cpp  CursiveText.h  Decorator.cpp  Decorator.h  Text.h  main.cpp
patterns/decorator/src/: BoldDecorator.cpp  CursiveDecorator.h  Text.cpp  VisualComponent.cpp  VisualComponent.h
patterns/singleton/: CMakeLists.txt  Singleton.cpp  Singleton.h  main.cpp
